# mode

./: .env.example  .gitignore  CLAUDE.md  README.md  current_prompt.md  demo_enhanced_cli.py  expense-tracker-prompt.txt  install-mode.sh  install.sh  main.py  mode  package.json  pyproject.toml  sonph-code  test_clean_output.py  test_enhanced_agent.py  test_error_display.py  test_list_content_fix.py
coding_agent/: __init__.py
coding_agent/commands/: __init__.py  custom_commands.py  native_commands.py
coding_agent/core/: __init__.py  agent.py  agent_config_parser.py  agent_registry.py  base_agent.py  config.py  dynamic_agent.py  general_purpose_agent.py  llm_providers.py  prompts.py  shell_manager.py  task_tool_generator.py  tool_wrapper.py
coding_agent/tools/: __init__.py  execution_tools.py  file_tools.py  search_tools.py  task_tool.py  web_fetch_tool.py  web_search_tool.py
coding_agent/ui/: __init__.py  diff_display.py  enhanced_cli.py  rich_cli.py
coding_agent/utils/: __init__.py  banner.py  context.py  git_utils.py  keyboard.py
data/: [16] Request - api.anthropic.com_v1_messages.json  [515] Request - api.anthropic.com_v1_messages.json  api_request_sample.json  output.md  parsed_request.json  websearch_description.txt
docs/: Long_term_memory.md  enhanced_cli_features.md
docs/agents/: internal_agents.md  octalysis-gamification-expert.json  ui-ux-designer.json
logs/: fulllog.txt  log2.txt
sample_codes/: deepseek_chat.py
tests/: test_task_tool.py  test_todowrite_display.py  test_ui_live.py  test_webfetch.py  test_websearch.py
(+29 files in other folders)
