[project]
name = "coding-agent"
version = "0.1.0"
description = "A Python-based coding agent implementation that mimics Claude Code functionality"
authors = [
    {name = "User", email = "user@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "langchain-anthropic>=0.3.19",
    "fredapi>=0.5.2",
    "langchain-xai>=0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
